tests/semantic/valid/38_e_as_downcast_ok.hulk
class A() {}
class B() is A() {}
let a:A = new B() in {
    let b:B = a as B in print(1);
};
