tests/semantic/invalid/45_e_base_args_type.hulk
class Person(name:String) {}
class Student(name:Number) is Person(name) {}
print(0);
